--- a/public/tabconfig.html
+++ b/public/tabconfig.html
@@ -5,9 +5,6 @@
 </head>
 <body>
   <h1>FamilySearch App Gallery</h1>
-  <div>
-    <ul class="applist"></ul>
-  </div>
 
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -19,36 +16,13 @@
     microsoftTeams.settings.registerOnSaveHandler(function(saveEvent) {
       microsoftTeams.settings.setSettings({
         entityID: "AppGallery",
-        contentUrl: "https://www.bing.com/maps/embed",
+        contentUrl: "https://misbach.github.io/MSTEamsTab/public/appgallery.html",
         suggestedTabName: "App Gallery",
         websiteUrl: "https://familysearch.org/apps",
         removeUrl: window.location.origin + "/tabremove.html"
       });
       saveEvent.notifySuccess();
     });
-
-    // Start tab content
-    (function() {
-      microsoftTeams.settings.setValidityState(true);
-
-      $.post("https://familysearch.org/apps/api/products/1/1000", function(rsp) {
-        var apps = rsp.feed.entries;
-        // Iterate all apps (except the first one)
-        for(var i=1; i<apps.length; i++) {
-          var summary = JSON.parse(apps[i].summary);
-
-          // Description is embedded in "EN" locale :-/
-          for(var j=0; j<summary.locales.length; j++) {
-            if (summary.locales[j].locale == "en") {
-              console.log(summary, summary.locales[j]);
-              $('.applist').append('<li class="appitem">'+summary.name+'</li>');
-
-            }
-          }
-        }
-      });
-
-    })(); 
   </script>
 </body>
 </html>
