changing remove tab config

--- a/public/tabconfig.html
+++ b/public/tabconfig.html
@@ -20,7 +20,7 @@
         contentUrl: "https://misbach.github.io/MSTEamsTab/public/appgallery.html",
         suggestedTabName: "AppGallery",
         websiteUrl: "https://familysearch.org/apps",
-        removeUrl: window.location.origin + "/tabremove.html"
+        removeUrl: "https://misbach.github.io/MSTEamsTab/public/tabremove.html"
       });
       saveEvent.notifySuccess();
     });
