--- a/public/tabconfig.html
+++ b/public/tabconfig.html
@@ -27,7 +27,8 @@
 
     // Start tab content
     $('.enablebtn').click(function(){
-      console.log(microsoftTeams.settings.setValidityState(true));
+      microsoftTeams.settings.setValidityState(true);
+      console.log("Done!");
     });
   </script>
 </body>
