--- a/public/tabconfig.html
+++ b/public/tabconfig.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
   <h1>FamilySearch App Gallery</h1>
-  <button onclick="save()">Enable</button>
+  <button onclick="save()">Save Config</button>
 
   <script src="https://statics.teams.microsoft.com/sdk/v0.4/js/MicrosoftTeams.min.js"></script>
   <script type="text/javascript">
